- @depreciated ob::instance() function, added Obullo::instance(); 
- Renamed ssc class Ssc.
- added <meta http-equiv="Content-Type" content="text/html; charset=utf-8">  to system/errors/ob_404.php
- Agent and Parser class moved to /Php5 library folder.
- added method chaining support to all Php5 libraries " e.g.: echo agent::instance()->init()->browser(); "
  
//-----------------------------------------------------------------------------

!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!
@todo .. add loader::model('subfolder/model_name')  local directory sub folder load support
@todo .. add loader::model('./outside_folder/model_name')  outside directory  load support

@todo .. add loader::app_model('subfolder/model_name')  local directory sub folder load support
@todo .. add loader::app_model('./outside_folder/model_name')  outside directory  load support

@todo .. add view('subfolder/view_filename')  local directory sub folder load support
@todo .. add view('./outside_folder/view_filename')  outside directory sub folder load support
@todo .. view_set_folder tests ...

@todo .. !!! be aware model_ loader::database construct() support works in old revisions.
@todo .. add to user guide php5 method chaining support like this 
@todo .. add benchmark_micro_timer() function to benchmark helper or use native function. and use this function in
DB class for profiling

echo agent::instance()
->init()
->browser();

echo calendar::instance()
->init()
->generate(2006, 10);


@todo .. change require function as require_once in loader::model func.
@todo .. change include function as incldue_once in loader::library and any other  func like codeigniter.

@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.

@todo .. add native extend functionality to native Obullo Code Model library.