@@ -217,7 +217,7 @@ $config['permitted_uri_chars']   = 'a-z 0-9~%.:_\-';
 | use segment based URLs.
 |
 */
-$config['enable_query_strings']  = FALSE;
+$config['enable_query_strings']  = TRUE;
 $config['directory_trigger']     = 'd';   
 $config['controller_trigger']    = 'c';
 $config['function_trigger']      = 'm';
